[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/circle_minigame/Racer.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/shapes/hex.png" type="Texture" id=2]
[ext_resource path="res://scenes/circle_minigame/Player.gd" type="Script" id=3]
[ext_resource path="res://other/random_assets/finish_line.png" type="Texture" id=4]
[ext_resource path="res://other/walls/wall.png" type="Texture" id=5]
[ext_resource path="res://scenes/circle_minigame/RacingMinigame.gd" type="Script" id=6]
[ext_resource path="res://scenes/circle_minigame/Finishline.gd" type="Script" id=7]
[ext_resource path="res://other/Fade.tscn" type="PackedScene" id=8]
[ext_resource path="res://characters/shapes/star.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 723.5, 95 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 135.5, 282 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.25, 210.5 )

[node name="Racingminigame" type="Node2D"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 298, 250 )
current = true
limit_left = 0
limit_bottom = 500

[node name="Racer" parent="." instance=ExtResource( 1 )]
position = Vector2( 172, 214 )
racing_speed = 95

[node name="Racer3" parent="." instance=ExtResource( 1 )]
position = Vector2( 233, 213 )
racing_speed = 65

[node name="Racer4" parent="." instance=ExtResource( 1 )]
position = Vector2( 39, 213 )
racing_speed = 100

[node name="Racer5" parent="." instance=ExtResource( 1 )]
position = Vector2( 106, 214 )
racing_speed = 200

[node name="Hexagon" type="RigidBody2D" parent="."]
visible = false
position = Vector2( 295, 211 )
collision_layer = 4
script = ExtResource( 3 )
push_speed = 50

[node name="Icon" type="Sprite" parent="Hexagon"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hexagon"]
polygon = PoolVector2Array( -13, -22, 13, -22, 25, 0, 13, 22, -13, 22, -25, 0 )

[node name="Star" type="RigidBody2D" parent="."]
visible = false
position = Vector2( 295, 211 )
collision_layer = 4
script = ExtResource( 3 )
push_speed = 50

[node name="Star" type="Sprite" parent="Star"]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Star"]
polygon = PoolVector2Array( -1, -22, 1, -22, 7, -9, 22, -7, 23, -5, 12, 6, 14, 20, 12, 21, 0, 15, -13, 21, -15, 20, -13, 6, -23, -4, -22, -7, -8, -9 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 383, 251 )

[node name="Wall" type="Sprite" parent="StaticBody2D"]
position = Vector2( 247, 143 )
scale = Vector2( 40, 10 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -72.5, 79 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 770, -116 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -92.0
margin_top = -134.0
margin_right = 1408.0
margin_bottom = 866.0
color = Color( 0.756863, 0.505882, 0.678431, 1 )

[node name="Finishline" type="Area2D" parent="."]
position = Vector2( 3, -46 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 7 )

[node name="FinishLine" type="Sprite" parent="Finishline"]
position = Vector2( 939, 80 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Finishline"]
position = Vector2( 907.25, 80.5 )
shape = SubResource( 3 )

[node name="Fade" parent="." instance=ExtResource( 8 )]

[connection signal="body_entered" from="Finishline" to="Hexagon" method="_on_Finishline_body_entered"]
[connection signal="body_entered" from="Finishline" to="Star" method="_on_Finishline_body_entered"]
